feat: add current price list import and query
